--- a/src/devices/SocketCan/SocketCan.csproj
+++ b/src/devices/SocketCan/SocketCan.csproj
@@ -5,6 +5,7 @@
     <!--Disabling default items so samples source won't get build by the main library-->
     <EnableDefaultItems>false</EnableDefaultItems>
     <LangVersion>Latest</LangVersion>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
